# MatsuMonsterMesh

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVLOG.md  LICENSE  Launch MatsuMonsterMesh.bat  Makefile  PORTING_NOTES.md  README.md  REVIEW_2026-07-15.md  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  build_log5.txt  build_log6.txt  build_log7.txt  build_log8.txt  build_log9.txt  build_tanmatsu.bat  make_icon.py  metadata.json  reconfigure.bat  run_build.py  sdkconfig  sdkconfig_tanmatsu  session14_prompt.md
.claude/: settings.local.json
components/emulator_sram_iface/: CMakeLists.txt  emulator_sram_iface.h  gnuboy_sram.c  gnuboy_sram.h
components/gnuboy/: CMakeLists.txt  loader.c  mem.c  save.c  sound.c
components/matsumonster_ui/: CMakeLists.txt  FastText.cpp  FastText.h  MatsuMonsterTerminal.cpp  MatsuMonsterTerminal.h  MeshtasticChatView.cpp  MeshtasticChatView.h
components/meshtastic_lora/: CMakeLists.txt
components/meshtastic_lora/include/: meshtastic_lora.h
components/meshtastic_lora/src/: meshtastic_lora.c
components/meshtastic_proto/: CMakeLists.txt
components/meshtastic_proto/include/: meshtastic_proto.h
components/meshtastic_proto/src/: meshtastic_proto.c
components/meshtastic_radio/: CMakeLists.txt  Kconfig  MeshtasticRadio.h  meshtastic_radio_lora.cpp  meshtastic_radio_lora.h  meshtastic_radio_serial.cpp  meshtastic_radio_serial.h  meshtastic_radio_stub.cpp  meshtastic_radio_stub.h
components/monster_core/: BattlePacket.h  CMakeLists.txt  DaycareAchievements.h  DaycareData.h  DaycareEventGen.cpp  DaycareEventGen.h  DaycareSavPatcher.h  DaycareTypes.h  Gen1BattleEngine.cpp  Gen1BattleEngine.h  Gen1Species.h  Gen3Back565.h  Gen3Front565.h  ISerialLink.h  LordE4.cpp  LordE4.h  LordGyms.cpp  LordGyms.h  LordLogic.cpp  LordLogic.h  LordRoutes.cpp  LordRoutes.h  LordSave.cpp  LordSave.h  MeshtasticTransport.h  MonsterMeshTextBattle.cpp  MonsterMeshTextBattle.h  PokemonData.h  PokemonDaycare.cpp  PokemonDaycare.h  RomSpriteExtract.cpp  RomSpriteExtract.h  monster_core_compat.h  showdown_gen1_basestats.h  showdown_gen1_moves.h  showdown_gen1_text.h  showdown_gen1_typechart.h  showdown_gen2_moves.h  showdown_gen3_basestats.h  showdown_gen3_moves.h  (+1 more)
components/mqtt_transport/: CMakeLists.txt
components/mqtt_transport/include/: mqtt_transport.h
components/mqtt_transport/src/: mqtt_transport.c
main/: CMakeLists.txt  config.h  idf_component.yml  main.c  menu.c  menu.h  monster_wiring.cpp  monster_wiring.h  notification_overlay.c  notification_overlay.h  rom_selector.c  rom_selector.h
sdkconfigs/: general  tanmatsu
